db2fce News - History of user-visible changes
Copyright (C) 2015-2019 credativ GmbH

Version 0.0.14 - Development

Version 0.0.13 - 2019-08-09

* Build system improvements
* Ensure that all objects are created in the db2 schema
* Update tests

Version 0.0.12 - 2017-06-30

* Added upper() and lower() functions (Balazs Barany)

Version 0.0.11 - 2017-02-20

* Added timestamp_format() function (Balazs Barany)

Version 0.0.10 - 2016-07-25

* Added date() and time() functions (Balazs Barany)

Version 0.0.9 - 2016-06-24

* Modified seconds() and microsseconds() functions to be
  DB2 compatible (Helmut Hartmann)

Version 0.0.8 - 2016-05-09

* Added strip() and digits() functions (Balazs Barany)

Version 0.0.7 - 2016-05-09

* Added update scripts through 0.0.4

Version 0.0.6 - 2016-02-24

* Added lcase() function

Version 0.0.5 - 2015-10-27

* Added testsuite

Version 0.0.4 - 2015-07-09

* Added !! operator alias for ||
* Added translate() function
* Added hex() function
* Added double() function
* Added months_between() function
* Added microsecond(), second(), minute() and hour() functions

Version 0.0.3 - 2015-04-28

* Removed ^= operator alias for pg_lsn and jsonb datatypes for backward
  compatibility

Version 0.0.2 - 2015-04-27

* Corrected schema usage privileges

Version 0.0.1 - 2015-04-27

* Initial version