@@ -3,6 +3,8 @@ Copyright (C) 2015-2019 credativ GmbH
 
 Version 0.0.14 - Development
 
+* Removed deprecated date types from ^= operator
+
 Version 0.0.13 - 2019-08-09
 
 * Build system improvements
